# meetily_improved

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_POLICY.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: WORKFLOWS_OVERVIEW.md  build-devtest.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml  ci.yml  pr-main-check.yml  release.yml  security.yml
backend/: requirements.txt
docs/: BUILDING.md  FFMPEG_PROVENANCE.md  FORK_IDENTITY_MIGRATION.md  GLIB_VARIANT_STR_ADVISORY.md  RELEASE_SECURITY.md  RUST_HARDWARE_TESTS.md  icon-contact-sheet.html
ffmpeg-build/: Cargo.toml  ffmpeg-assets.json
ffmpeg-build/src/: lib.rs
frontend/: .gitignore  README.md  eslint.config.mjs  eslint.strict.config.mjs  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/patches/: @wdio__tauri-service@1.2.0.patch
frontend/scripts/: check-route-bundle-budget.mjs  clean-next-output.mjs  compile-macos-icon.mjs  run-browser-e2e.mjs
frontend/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.qa.conf.json  tauri.qa.minimum.conf.json  tauri.qa.onboarding.conf.json  tauri.qa.routes.conf.json  tauri.qa.wdio.conf.json
frontend/src-tauri/capabilities/: main.json  wdio.json
frontend/src-tauri/icons/: icon.icns  tray-icon-template.rgba
frontend/src-tauri/permissions/: main-window.toml
frontend/src-tauri/src/: config.rs  identity_migration.rs  lib.rs  main.rs  tray.rs
frontend/src/app/: globals.css  layout.tsx  metadata.ts  metadata.tsx  page.tsx
frontend/src/components/: About.tsx  AnalyticsConsentSwitch.tsx  (+36 more)
llama-helper/: Cargo.toml
llama-helper/src/: main.rs
scripts/: generate-update-manifest-github.js  test-update-locally.js
(+222 files in other folders)
