[workspace]
resolver = "2"
members = [
    "frontend/src-tauri",
    "llama-helper"
]

# Shared workspace settings
[workspace.package]
edition = "2021"
rust-version = "1.88"

# Shared dependencies that can be inherited by workspace members
[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }

[patch.crates-io]
# notify-rust 4.17.0 is the last upstream release compatible with our Rust 1.88
# floor. The vendored crate applies upstream PR #288's one-line Windows fix,
# removing the vulnerable quick-xml parser without inheriting 4.18's Rust 1.89
# requirement. See vendor/notify-rust/MEETILY-VENDORING.md.
notify-rust = { path = "vendor/notify-rust" }
