[package]
name = "ffmpeg-build"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
license = "MIT"

[dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
xz2 = "0.1"
zip = "2.2"
